# hng-stage-1

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: lint.yml
.vercel/: project.json
core/: admin.py  middleware.py  models.py  schemas.py  urls.py  utils.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_alter_personmodel_age_group_alter_personmodel_gender_and_more.py  0002_alter_personmodel_options_and_more.py  0003_alter_personmodel_options_alter_personmodel_id_and_more.py  0004_alter_personmodel_id.py  0005_alter_personmodel_id.py
project/: settings.py  urls.py  views.py
users/: managers.py  models.py  schema.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_is_staff_alter_customuser_is_superuser.py  0003_remove_customuser_last_login_at.py
utils/: api_request_handler.py  errorHandler.py  generateTempFile.py  get_links.py  pcke_generator.py  query_parser.py
