[project]
name = "stage-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.12",
    "requests>=2.33.1",
]
